实时预警，推动到es

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>common</module>
         <module>mock</module>
         <module>dw-logger</module>
+        <module>dw-realtime</module>
+        <module>dw-publisher</module>
+        <module>dw-canal</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
